--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Fresh Notes Note Taker",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node backend/dist/server.js",
+    "start": "node dist/server.js",
     "lint": "eslint . --ext .ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
